# ndk-samples

./: README.md  settings.gradle
.github/workflows/: build.yml
audio-echo/: README.md
audio-echo/app/: build.gradle
audio-echo/app/src/main/cpp/: CMakeLists.txt  audio_effect.cpp  audio_effect.h  audio_main.cpp  audio_player.cpp  audio_player.h  audio_recorder.cpp  audio_recorder.h  buf_manager.h  jni.cpp  jni_interface.h  libecho.map.txt
base/src/main/cpp/: CMakeLists.txt
bitmap-plasma/: README.md
bitmap-plasma/app/: build.gradle
bitmap-plasma/app/src/main/cpp/: CMakeLists.txt  jni.cpp  libplasma.map.txt  plasma.c  plasma.cpp  plasma.h
camera/: README.md
camera/basic/: build.gradle
camera/basic/src/main/cpp/: CMakeLists.txt  android_main.cpp  camera_engine.cpp  camera_listeners.cpp  camera_manager.cpp  camera_ui.cpp  image_reader.cpp  libndk_camera.map.txt
camera/camera-utils/: build.gradle.kts
camera/camera-utils/src/main/cpp/: CMakeLists.txt  camera_utils.cpp
camera/common/utils/: camera_utils.cpp
camera/texture-view/: build.gradle
camera/texture-view/src/main/cpp/: CMakeLists.txt  android_main.cpp  camera_engine.cpp  camera_engine.h  camera_listeners.cpp  camera_manager.cpp  libcamera_textureview.map.txt
cmake/: AppLibrary.cmake
display-p3/image-view/: build.gradle
endless-tunnel/: README.md
endless-tunnel/app/src/main/cpp/: CMakeLists.txt  anim.cpp  ascii_to_geom.cpp  common.hpp  dialog_scene.cpp  indexbuf.cpp  input_util.cpp  jni_util.cpp  libgame.map.txt  native_engine.cpp  obstacle.hpp  obstacle_generator.cpp  our_shader.cpp  play_scene.cpp  scene.cpp  scene_manager.cpp  sfxman.cpp  shader.cpp  shape_renderer.cpp  tex_quad.cpp  text_renderer.cpp  texture.cpp  ui_scene.cpp  ui_scene.hpp  vertexbuf.cpp  welcome_scene.cpp
exceptions/: README.md
exceptions/app/: build.gradle
exceptions/app/src/main/cpp/: CMakeLists.txt  exception_helper.h  libexceptions.map.txt  native-lib.cpp
gles3jni/: README.md
gles3jni/app/: build.gradle
gles3jni/app/src/main/cpp/: CMakeLists.txt  gles3jni.cpp  gles3jni.h  libgles3jni.map.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hello-gl2/: README.md
hello-gl2/app/: build.gradle
hello-gl2/app/src/main/cpp/: CMakeLists.txt  gl_code.cpp  libgl2jni.map.txt
hello-jni/: README.md
hello-jni/app/: build.gradle
hello-jni/app/src/main/cpp/: CMakeLists.txt  hello-jni.cpp  libhello-jni.map.txt
hello-jniCallback/: README.md
hello-jniCallback/app/: build.gradle
hello-jniCallback/app/src/main/cpp/: CMakeLists.txt  hello-jnicallback.c  hello-jnicallback.cpp  libhello-jnicallback.map.txt
hello-libs/app/: build.gradle
hello-libs/app/src/main/cpp/: CMakeLists.txt  hello-libs.cpp
hello-neon/: README.md
hello-neon/app/: build.gradle
hello-neon/app/src/main/cpp/: CMakeLists.txt
hello-oboe/: README.md
hello-oboe/app/: build.gradle
hello-oboe/app/src/main/cpp/: CMakeLists.txt  OboeSinePlayer.h  hello-oboe.cpp  libhello-oboe.map.txt
hello-vulkan/: README.md  build.gradle
hello-vulkan/app/: build.gradle
hello-vulkan/app/src/main/cpp/: CMakeLists.txt  hellovk.h  libhellovkjni.map.txt  vk_main.cpp
native-activity/: README.md
native-activity/app/: build.gradle
native-activity/app/src/main/: AndroidManifest.xml
native-activity/app/src/main/cpp/: CMakeLists.txt  libnative-activity.map.txt  main.cpp
native-audio/: README.md
native-audio/app/: build.gradle
native-audio/app/src/main/cpp/: CMakeLists.txt  libnative-audio-jni.map.txt  native-audio-jni.cpp
native-codec/: README.md
native-codec/app/: build.gradle
native-codec/app/src/main/cpp/: CMakeLists.txt  libnative-codec-jni.map.txt  looper.cpp  native-codec-jni.cpp
native-media/: README.md
native-media/app/src/main/cpp/: CMakeLists.txt  native-media-jni.c
native-midi/: README.md
native-midi/app/: build.gradle
native-midi/app/src/main/cpp/: AppMidiManager.cpp  CMakeLists.txt  MainActivity.cpp  libnative_midi.map.txt
native-plasma/app/src/main/cpp/: CMakeLists.txt  plasma.c
nn-samples/: README.md
nn-samples/basic/: build.gradle
nn-samples/basic/src/main/cpp/: CMakeLists.txt  nn_sample.cpp  simple_model.cpp  simple_model.h
nn-samples/sequence/: build.gradle
nn-samples/sequence/src/main/cpp/: CMakeLists.txt
orderfile/app/: build.gradle
orderfile/app/src/main/cpp/: CMakeLists.txt  liborderfiledemo.map.txt  orderfile.cpp
other-builds/ndkbuild/hello-jni/app/: build.gradle
other-builds/ndkbuild/hello-libs/app/: build.gradle
other-builds/ndkbuild/hello-neon/app/: build.gradle
other-builds/ndkbuild/native-activity/app/: build.gradle
other-builds/ndkbuild/native-audio/app/: build.gradle
other-builds/ndkbuild/nn-samples/basic/: build.gradle
prefab/: README.md
prefab/curl-ssl/: build.gradle
prefab/curl-ssl/app/: build.gradle
prefab/prefab-dependency/: build.gradle
prefab/prefab-dependency/app/: build.gradle
san-angeles/: README.md
san-angeles/app/src/main/cpp/: CMakeLists.txt  demo.c  importgl.c  importgl.h
sanitizers/: README.md
sanitizers/app/: build.gradle
sanitizers/app/src/main/cpp/: CMakeLists.txt  libsanitizers.map.txt  native-lib.cpp
sensor-graph/: README.md
sensor-graph/accelerometer/: build.gradle
sensor-graph/accelerometer/src/main/cpp/: CMakeLists.txt  libaccelerometergraph.map.txt  sensorgraph.cpp
teapots/: README.md
teapots/choreographer-30fps/: build.gradle
teapots/choreographer-30fps/src/main/cpp/: CMakeLists.txt  ChoreographerNativeActivity.cpp  TeapotRenderer.cpp  TeapotRenderer.h  (+1 more)
teapots/classic-teapot/: build.gradle
teapots/common/ndk_helper/: CMakeLists.txt  JNIHelper.cpp  perfMonitor.cpp  perfMonitor.h  sensorManager.h  shader.cpp  shader.h  tapCamera.cpp  vecmath.cpp  vecmath.h
teapots/image-decoder/: build.gradle
teapots/more-teapots/: build.gradle
teapots/textured-teapot/: build.gradle
unit-test/: README.md
unit-test/app/: build.gradle
unit-test/app/src/main/cpp/: CMakeLists.txt  libunittest.map.txt  native-lib.cpp
vectorization/src/main/cpp/: CMakeLists.txt  benchmark.cpp  matrix.h
(+28 files in other folders)
